# src/AppForSEII2526.Web/OpenAPIs/swagger1.json
@@ -14,6 +14,56 @@
     "version": "v1"
   },
   "paths": {
+    "/GetFuelTypes": {
+      "get": {
+        "tags": [
+          "Cars"
+        ],
+        "operationId": "GetFuelTypes",
+        "parameters": [
+          {
+            "name": "fuelType",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+
+
     "/api/CarsControllers/GetCars": {
       "get": {
         "tags": [
